[package]
authors = ["TERRAPEXC Labs."]
description = "A Terrapexc Trading contract"
edition = "2021"
license = "MIT"
name = "terrapexc-trading"
version = "0.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
classic_terrapexc = {path = "../../packages/classic_terrapexc", default-features = false, version = "2.6.1"}
cosmwasm-std = {version = "0.16.7"}
cw-storage-plus = {version = "0.8.0"}
protobuf = {version = "2", features = ["with-bytes"]}
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.20"}
# cw-utils = { version = "0.16.0" }
cw2 = {version = "0.8.0"}
cw20 = {version = "0.8.0"}

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-storage = {version = "0.16.0"}
